name:                fuzzytime
version:             0.7.9
description:         A clock and timer that tell the time in a more human way (the 'ten past six' style)
synopsis:            A 'ten past six' style clock
category:            Utils
license:             GPL
license-file:        LICENSE
author:              Kamil Stachowski
maintainer:          kamil (a full stop) stachowski (an at sign) gmail (a full stop) com
build-type:          Simple
stability:           Experimental
cabal-version:       >=1.8
tested-with:         GHC == 8.4.4
extra-source-files:  CHANGELOG, INSTALL, README, src/fuzzytime.1, src/sound.wav


library
    buildable:       True
    build-depends:   base >= 4 && < 5
    exposed-modules: LibFuzzyTime,
                     LibFuzzyTime.Danish,
                     LibFuzzyTime.Dutch,
                     LibFuzzyTime.English,
                     LibFuzzyTime.French,
                     LibFuzzyTime.German,
                     LibFuzzyTime.Greek,
                     LibFuzzyTime.Italian,
                     LibFuzzyTime.Japanese,
                     LibFuzzyTime.Norwegian,
                     LibFuzzyTime.Polish,
                     LibFuzzyTime.Spanish,
                     LibFuzzyTime.Swedish,
                     LibFuzzyTime.Turkish
    hs-source-dirs:  src
    ghc-options: -Wno-tabs

executable fuzzytime
    buildable:       True
    main-is:         main.hs
    build-depends:   base >= 4 && < 5, cmdargs, directory, old-time, process
    other-modules:   LibFuzzyTime,
                     LibFuzzyTime.Danish,
                     LibFuzzyTime.Dutch,
                     LibFuzzyTime.English,
                     LibFuzzyTime.French,
                     LibFuzzyTime.German,
                     LibFuzzyTime.Greek,
                     LibFuzzyTime.Italian,
                     LibFuzzyTime.Japanese,
                     LibFuzzyTime.Norwegian,
                     LibFuzzyTime.Polish,
                     LibFuzzyTime.Spanish,
                     LibFuzzyTime.Swedish,
                     LibFuzzyTime.Turkish
    hs-source-dirs:  src
    ghc-options: -Wno-tabs

source-repository this
    type:            git
    location:        https://github.com/kamwitsta/fuzzytime
    tag:             0.7.9
